Remove Contact Form
Commented out contact form temporarily until it is working. Updated info in Volunteer section (commented out language) so it won't refer to contact form

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 		 <p>There are currently two vacant trustee positions.</p>
 
 		 <h3>Volunteer With Us</h3>
-		 <p>Do you love history, research, learning about your family history, or just the history of our small town? If so, please consider volunteering with us! Together, we can find a project that matches your interests and helps our collections. Past volunteers have cataloged photographs, researched and designed portions of our exhibits, organized collection materials, researched a specific item in our collection, cataloged new collection items, written articles for our quarterly newsletter, compiled family genealogies, and much more. If you are interested, please  contact us by filling out the webform at the bottom of the page or by sending an email to chathistsoc@gmail.com.</p>
+		 <p>Do you love history, research, learning about your family history, or just the history of our small town? If so, please consider volunteering with us! Together, we can find a project that matches your interests and helps our collections. Past volunteers have cataloged photographs, researched and designed portions of our exhibits, organized collection materials, researched a specific item in our collection, cataloged new collection items, written articles for our quarterly newsletter, compiled family genealogies, and much more. If you are interested, please  contact us <!-- by filling out the webform at the bottom of the page or -->by sending an email to chathistsoc@gmail.com.</p>
          
         </div>
       </div>
@@ -433,6 +433,7 @@
     
     <!--Email Form-->
     <div class="col-md-8 col-md-offset-2">
+      <!--
       <h3>Leave us a message</h3>
       <form name="sentMessage" id="contactForm" novalidate>
         <div class="row">
@@ -455,7 +456,8 @@
         </div>
         <div id="success"></div>
         <button type="submit" class="btn btn-default">Send Message</button>
-      </form>
+      </form> 
+  		-->
       <div class="social">
         <ul>
           <li><a href="https://www.facebook.com/Chateaugay-Historical-Society-233781393341925/" target="new"><i class="fa fa-facebook"></i></a></li>
@@ -473,7 +475,7 @@
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2021 Chateaugay Historical Society. </br>
-	  Last Modified [January 11, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+	  Last Modified [February 10, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
