--- a/index.html
+++ b/index.html
@@ -34,7 +34,22 @@
     <![endif]-->
 </head>
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+ <!--COVID Banner -->
+ <!--<header id="banner">
+ 	<div align="center">
+ <marquee behavior="scroll" bgcolor="#bb3434" direction="left" height:="" 
+ loop="7" scrollamount="3" scrolldelay="0" width="100%">
+ <span style="font-size: 20px;color:#FFFFFF">
+ We are currently closed because of the COVID-19 pandemic. We will be opening when it is safe and appropriate to do so.</span></marquee>
+</div>
+</header>-->
 
+<body>
+  <div class="alert-box">
+    <span class="badge">COVID-19</span> We are currently closed to the public because of the COVID-19 pandemic. We will be opening when it is safe and appropriate to do so.
+  </div>  
+</body>
+ 	
 <!-- Header -->
 <header id="header">
   <div class="intro">
@@ -50,6 +65,7 @@
 	  </div>
     </div>
  </header>
+
 <!-- Navigation -->
 <div id="nav">
   <nav class="navbar navbar-custom">
