--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
 		  <li> <a class="page-scroll" href="#resources">Resources and Links</a> </li>
 		  <li> <a class="page-scroll" href="#forms">Forms and Policies</a> </li>
           <li> <a class="page-scroll" href="#contact">Contact/Visit</a> </li>
+          <li> <a class="page-scroll" href= blog.html>Blog</a></li>
         </ul>
       </div>
     </div>
@@ -98,7 +99,7 @@
 		  <a href="ArchivalCenter.pdf" target="new"> The Archival Center</a>, located on the second floor of the Chateaugay Town Hall, houses archival and research materials, including a growing genealogical collection, 
 		  as well as research workstations for use by the public. The Chateaugay Historical Society has seasonal displays, seminars, and presentations on local history topics. 
 		  Additionally, we have hosted walking, school, and group tours of the facilities and the town in the past. The Society publishes a quarterly newsletter that contains 
-		  articles on various topics of Chateaugay history. Want to stay up to date with we what are doing? Please follow us on <a href="https://www.facebook.com/Chateaugay-Historical-Society-233781393341925/" target="new">Facebook </a>.</p>
+		  articles on various topics of Chateaugay history. Want to stay up to date with we what are doing? Interested in learning more about pieces of Chateaugay history? Please check out our <a href="blog.html">blog</a> or follow us on <a href="https://www.facebook.com/Chateaugay-Historical-Society-233781393341925/" target="new">Facebook </a>.</p>
 
 		   <p class="text-center"><a class="btn btn-primary" href="History of Chateaugay.pdf" target="new"><i class="fa fa-download"></i> Chateaugay History</a></p>
 		  <p class="text-center"><a class="btn btn-primary" href="ChateaugayFactSheet.pdf" target="new"><i class="fa fa-download"></i>Chateaugay Fun Facts</a></p>
@@ -483,7 +484,7 @@
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2021 Chateaugay Historical Society. </br>
-	  Last Modified [February 10, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+	  Last Modified [February 13, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
