--- a/Tours/TourSitePageTemplate.html
+++ b/Tours/TourSitePageTemplate.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Chateaugay Historical Society</title>
+<title>CHS Tours</title>
 <meta name="description" content="">
 <meta name="author" content="">
 
@@ -41,7 +41,7 @@
     <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse"> <i class="fa fa-bars"></i> </button>
-        <a class="navbar-brand page-scroll" href="indexCHS.html">Home</a> </div>
+        <a class="navbar-brand page-scroll" href="index.html">Home</a> </div>
       
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
