--- a/blog.html
+++ b/blog.html
@@ -20,8 +20,10 @@
 
 <!-- Stylesheet
     ================================================== -->
+<link rel="stylesheet" type="text/css"  href="css/Blogstyle.css">
 <link rel="stylesheet" type="text/css"  href="css/CHSstyle.css">
 <link rel="stylesheet" type="text/css" href="css/prettyPhoto.css">
+
 <link href='http://fonts.googleapis.com/css?family=Lato:400,700,900,300' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,800,600,300' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="js/modernizr.custom.js"></script>
@@ -45,7 +47,7 @@
 </div>
 
 <!-- Site Page -->
-<div id="about">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Anderson Block</h2>
@@ -57,89 +59,104 @@
 <div class="slideshow-container">
 
   <!-- Full-width images with number and caption text -->
-  <div class="mySlides none">
+  <div class="mySlides1 none">
+     <div class="numbertext">1 / 15</div>
     <img src="blog/andersonblock_01.jpg" style="width:100%">
-    <!--<div class="text">Caption Text</div>-->
+    <!-- <div class="text">Caption Text</div> -->
   </div>
 
-  <div class="mySlides none">
+  <div class="mySlides1 none">
+    <div class="numbertext">2 / 15</div>
     <img src="blog/andersonblock_02.jpg" style="width:100%">
   </div>
 
-  <div class="mySlides none">
+  <div class="mySlides1 none">
+    <div class="numbertext">3 / 15</div>
     <img src="blog/andersonblock_03.jpg" style="width:100%">
   </div>
 
-    <div class="mySlides none">
+    <div class="mySlides1 none">
+      <div class="numbertext">4 / 15</div>
     <img src="blog/andersonblock_04.jpg" style="width:100%">
   </div>
 
-  <div class="mySlides none">
+  <div class="mySlides1 none">
+    <div class="numbertext">5 / 15</div>
     <img src="blog/andersonblock_05.jpg" style="width:100%">
   </div>
 
-  <div class="mySlides none">
+  <div class="mySlides1 none">
+    <div class="numbertext">6 / 15</div>
     <img src="blog/andersonblock_06.jpg" style="width:100%">
   </div>
-  <div class="mySlides none">
+  <div class="mySlides1 none">
+    <div class="numbertext">7 / 15</div>
     <img src="blog/andersonblock_07.jpg" style="width:100%">
   </div>
 
-  <div class="mySlides none">
+  <div class="mySlides1 none">
+    <div class="numbertext">8 / 15</div>
     <img src="blog/andersonblock_08.jpg" style="width:100%">
   </div>
 
-  <div class="mySlides none">
+  <div class="mySlides1 none">
+    <div class="numbertext">9 / 15</div>
     <img src="blog/andersonblock_09.jpg" style="width:100%">
   </div>
 
-    <div class="mySlides none">
+    <div class="mySlides1 none">
+      <div class="numbertext">10 / 15</div>
     <img src="blog/andersonblock_10.jpg" style="width:100%">
   </div>
 
-  <div class="mySlides none">
+  <div class="mySlides1 none">
+    <div class="numbertext">11 / 15</div>
     <img src="blog/andersonblock_11.jpg" style="width:100%">
   </div>
-  <div class="mySlides none">
+  <div class="mySlides1 none">
+    <div class="numbertext">12 / 15</div>
     <img src="blog/andersonblock_12.jpg" style="width:100%">
   </div>
-   <div class="mySlides none">
+   <div class="mySlides1 none">
+    <div class="numbertext">13 / 15</div>
     <img src="blog/andersonblock_13.jpg" style="width:100%">
   </div>
-  <div class="mySlides none">
+  <div class="mySlides1 none">
+    <div class="numbertext">14 / 15</div>
     <img src="blog/andersonblock_14.jpg" style="width:100%">
   </div>
-  <div class="mySlides none">
+  <div class="mySlides1 none">
+    <div class="numbertext">15 / 15</div>
     <img src="blog/andersonblock_15.jpg" style="width:100%">
   </div>
 
   <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
 </div>
 <br>
 
 <!-- The dots/circles -->
-<div style="text-align:center">
-  <span class="dot" onclick="currentSlide(1)"></span>
-  <span class="dot" onclick="currentSlide(2)"></span>
-  <span class="dot" onclick="currentSlide(3)"></span>
-  <span class="dot" onclick="currentSlide(4)"></span>
-  <span class="dot" onclick="currentSlide(5)"></span>
-  <span class="dot" onclick="currentSlide(6)"></span>
-  <span class="dot" onclick="currentSlide(7)"></span>
-  <span class="dot" onclick="currentSlide(8)"></span>
-  <span class="dot" onclick="currentSlide(9)"></span>
-  <span class="dot" onclick="currentSlide(10)"></span>
-  <span class="dot" onclick="currentSlide(11)"></span>
-  <span class="dot" onclick="currentSlide(12)"></span>
-  <span class="dot" onclick="currentSlide(13)"></span>
-  <span class="dot" onclick="currentSlide(14)"></span>
-  <span class="dot" onclick="currentSlide(15)"></span>
-</div> 
+<!-- <div style="text-align:center">
+  <span class="dot" onclick="currentSlide(1, 0)"></span>
+  <span class="dot" onclick="currentSlide(2, 0)"></span>
+  <span class="dot" onclick="currentSlide(3, 0)"></span>
+  <span class="dot" onclick="currentSlide(4, 0)"></span>
+  <span class="dot" onclick="currentSlide(5, 0)"></span>
+  <span class="dot" onclick="currentSlide(6, 0)"></span>
+  <span class="dot" onclick="currentSlide(7, 0)"></span>
+  <span class="dot" onclick="currentSlide(8, 0)"></span>
+  <span class="dot" onclick="currentSlide(9, 0)"></span>
+  <span class="dot" onclick="currentSlide(10, 0)"></span>
+  <span class="dot" onclick="currentSlide(11, 0)"></span>
+  <span class="dot" onclick="currentSlide(12, 0)"></span>
+  <span class="dot" onclick="currentSlide(13, 0)"></span>
+  <span class="dot" onclick="currentSlide(14, 0)"></span>
+  <span class="dot" onclick="currentSlide(15, 0)"></span>
+</div>  -->
 	  
     <!--BLOG TEXT-->
-        <div class="about-text">
+        <div class="blog-text">
           <p>We looked at the Chateaugay bank building last weekend. This time, let’s turn to the Anderson Block on the north side of East Main Street. This structure was built following the great fire of 1893 which destroyed every building between River Street and John Street. Mary Humiston wrote an account of this blaze in the very first edition of our newsletter in 2007. 
 The temps were far below zero and the wind was blowing a gale on the night of the fire. The Fire Department had no chance against those daunting conditions. When the sun rose the next morning, the entire block was in ruins. In fact, the embers had even swirled around and ignited the small store west of the blaze on the corner of River and West Main. This, too, was destroyed. In fact, that newly vacant lot made construction of the new bank possible (but that was last week’s post). </p>
 <p>Many owners on East Main Street immediately began to make plans to rebuild. Others sold the property and buyers scooped up the suddenly available lots and made plans for new business buildings. A new village ordinance mandated that all newly constructed business district structures had to be of masonry, not wood construction.
@@ -160,12 +177,79 @@ Is this block the “grand dame” of the remaining business blocks on Main Stre
   </div>
 
 
+<!-- Site Page -->
+<div id="blog2">
+  <div class="container">
+    <div class="section-title text-center center">
+      <h2>Key Bank</h2>
+      <hr>
+      <h5>February 7, 2021 | Mick Jarvis</h5>
+    </div>
+
+     <!-- Slideshow container -->
+<div class="slideshow-container">
+
+  <!-- Full-width images with number and caption text -->
+  <div class="mySlides2 none">
+    <div class="numbertext">1 / 4</div>
+    <img src="blog/keybank_01.jpg" style="width:100%">
+    <!--<div class="text">Caption Text</div>-->
+  </div>
+
+  <div class="mySlides2 none">
+    <div class="numbertext">2 / 4</div>
+    <img src="blog/keybank_02.jpg" style="width:100%">
+  </div>
+
+  <div class="mySlides2 none">
+    <div class="numbertext">3 / 4</div>
+    <img src="blog/keybank_03.JPG" style="width:100%">
+  </div>
+
+    <div class="mySlides2 none">
+      <div class="numbertext">4 / 4</div>
+    <img src="blog/keybank_04.JPG" style="width:100%">
+  </div>
+
+  <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+</div>
+<br>
+
+<!-- The dots/circles -->
+<!-- <div style="text-align:center">
+  <span class="dot" onclick="currentSlide(1, 1)"></span>
+  <span class="dot" onclick="currentSlide(2, 1)"></span>
+  <span class="dot" onclick="currentSlide(3, 1)"></span>
+  <span class="dot" onclick="currentSlide(4, 1)"></span>
+</div>  -->
+    
+    <!--BLOG TEXT-->
+        <div class="blog-text">
+          <p>The Chateaugay branch of Key Bank closed almost two years ago. The building sits empty today. When it was built in late 1890s, it quickly became one of the busiest spots in the business district. </p>
+
+<p>The bank used a portion of the first floor for its lobby and located several banking offices in the lowest level. The rest of the first floor and the second housed several retail businesses over the early years. The third floor was used as a meeting space for the Grand Army of the Republic at first and then the Masonic Lodge used the floor. </p>
+
+<p>The third space was (is) a large, open space with a small enclosed area for storage and any kitchen needs.</p>
+
+<p>Before the bank was closed, I was allowed to go into the third floor to take a few photos. No pictures were allowed in the basement office and vault area, nor on the first floor and second floor with the meeting room and a third vault.</p>
+
+<p>What happens next for the building is unsure. It is currently for sale. I remember thinking, as I stood in that third floor space, that with full glass on the east and south walls it would make an amazing studio apartment.</p>
+
+<p>Included here is an image of the bank shortly after it opened and the main entrance was on the corner. The next photo shows the bank more recently with the entrance on the west side of the building's front. The last two shots show the space on the third floor. Even though it has not been used for many years, it is easy to see how well finished the room was when it was new.</p>
+
+<p>Another Chateaugay landmark transitions to an uncertain future...</p>
+     </div>
+    </div>
+  </div>
+
 <!--Footer-->
 <div id="footer">
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2018 Chateaugay Historical Society. </br>
-	  Last Modified [February 13, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+	  Last Modified [February 15, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
