--- a/blog.html
+++ b/blog.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -46,6 +47,7 @@
   </nav>
 </div>
 
+
 <!-- Site Page -->
 <div id="blog1">
   <div class="container">
@@ -58,106 +60,108 @@
      <!-- Slideshow container -->
 <div class="slideshow-container">
 
-  <!-- Full-width images with number and caption text -->
+<!-- Full-width images with number and caption text -->
+
+
   <div class="mySlides1 none">
      <div class="numbertext">1 / 15</div>
-    <img src="blog/andersonblock_01.jpg" style="width:100%">
-    <!-- <div class="text">Caption Text</div> -->
+    <img src="blog/imgs/2021-02-12_andersonblock/2021-02-12_andersonblock_01.jpg" style="width:100%">
   </div>
 
-  <div class="mySlides1 none">
-    <div class="numbertext">2 / 15</div>
-    <img src="blog/andersonblock_02.jpg" style="width:100%">
-  </div>
 
   <div class="mySlides1 none">
-    <div class="numbertext">3 / 15</div>
-    <img src="blog/andersonblock_03.jpg" style="width:100%">
+     <div class="numbertext">2 / 15</div>
+    <img src="blog/imgs/2021-02-12_andersonblock/2021-02-12_andersonblock_02.jpg" style="width:100%">
   </div>
 
-    <div class="mySlides1 none">
-      <div class="numbertext">4 / 15</div>
-    <img src="blog/andersonblock_04.jpg" style="width:100%">
-  </div>
 
   <div class="mySlides1 none">
-    <div class="numbertext">5 / 15</div>
-    <img src="blog/andersonblock_05.jpg" style="width:100%">
+     <div class="numbertext">3 / 15</div>
+    <img src="blog/imgs/2021-02-12_andersonblock/2021-02-12_andersonblock_03.jpg" style="width:100%">
   </div>
 
-  <div class="mySlides1 none">
-    <div class="numbertext">6 / 15</div>
-    <img src="blog/andersonblock_06.jpg" style="width:100%">
-  </div>
-  <div class="mySlides1 none">
-    <div class="numbertext">7 / 15</div>
-    <img src="blog/andersonblock_07.jpg" style="width:100%">
-  </div>
 
   <div class="mySlides1 none">
-    <div class="numbertext">8 / 15</div>
-    <img src="blog/andersonblock_08.jpg" style="width:100%">
+     <div class="numbertext">4 / 15</div>
+    <img src="blog/imgs/2021-02-12_andersonblock/2021-02-12_andersonblock_04.jpg" style="width:100%">
   </div>
 
-  <div class="mySlides1 none">
-    <div class="numbertext">9 / 15</div>
-    <img src="blog/andersonblock_09.jpg" style="width:100%">
-  </div>
-
-    <div class="mySlides1 none">
-      <div class="numbertext">10 / 15</div>
-    <img src="blog/andersonblock_10.jpg" style="width:100%">
-  </div>
 
   <div class="mySlides1 none">
-    <div class="numbertext">11 / 15</div>
-    <img src="blog/andersonblock_11.jpg" style="width:100%">
-  </div>
-  <div class="mySlides1 none">
-    <div class="numbertext">12 / 15</div>
-    <img src="blog/andersonblock_12.jpg" style="width:100%">
-  </div>
-   <div class="mySlides1 none">
-    <div class="numbertext">13 / 15</div>
-    <img src="blog/andersonblock_13.jpg" style="width:100%">
-  </div>
-  <div class="mySlides1 none">
-    <div class="numbertext">14 / 15</div>
-    <img src="blog/andersonblock_14.jpg" style="width:100%">
-  </div>
-  <div class="mySlides1 none">
-    <div class="numbertext">15 / 15</div>
-    <img src="blog/andersonblock_15.jpg" style="width:100%">
+     <div class="numbertext">5 / 15</div>
+    <img src="blog/imgs/2021-02-12_andersonblock/2021-02-12_andersonblock_05.jpg" style="width:100%">
   </div>
 
-  <!-- Next and previous buttons -->
+
+  <div class="mySlides1 none">
+     <div class="numbertext">6 / 15</div>
+    <img src="blog/imgs/2021-02-12_andersonblock/2021-02-12_andersonblock_06.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">7 / 15</div>
+    <img src="blog/imgs/2021-02-12_andersonblock/2021-02-12_andersonblock_07.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">8 / 15</div>
+    <img src="blog/imgs/2021-02-12_andersonblock/2021-02-12_andersonblock_08.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">9 / 15</div>
+    <img src="blog/imgs/2021-02-12_andersonblock/2021-02-12_andersonblock_09.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">10 / 15</div>
+    <img src="blog/imgs/2021-02-12_andersonblock/2021-02-12_andersonblock_10.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">11 / 15</div>
+    <img src="blog/imgs/2021-02-12_andersonblock/2021-02-12_andersonblock_11.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">12 / 15</div>
+    <img src="blog/imgs/2021-02-12_andersonblock/2021-02-12_andersonblock_12.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">13 / 15</div>
+    <img src="blog/imgs/2021-02-12_andersonblock/2021-02-12_andersonblock_13.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">14 / 15</div>
+    <img src="blog/imgs/2021-02-12_andersonblock/2021-02-12_andersonblock_14.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">15 / 15</div>
+    <img src="blog/imgs/2021-02-12_andersonblock/2021-02-12_andersonblock_15.jpg" style="width:100%">
+  </div>
+
+
+      <!-- Next and previous buttons -->
   <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
   <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
 </div>
 <br>
 
-<!-- The dots/circles -->
-<!-- <div style="text-align:center">
-  <span class="dot" onclick="currentSlide(1, 0)"></span>
-  <span class="dot" onclick="currentSlide(2, 0)"></span>
-  <span class="dot" onclick="currentSlide(3, 0)"></span>
-  <span class="dot" onclick="currentSlide(4, 0)"></span>
-  <span class="dot" onclick="currentSlide(5, 0)"></span>
-  <span class="dot" onclick="currentSlide(6, 0)"></span>
-  <span class="dot" onclick="currentSlide(7, 0)"></span>
-  <span class="dot" onclick="currentSlide(8, 0)"></span>
-  <span class="dot" onclick="currentSlide(9, 0)"></span>
-  <span class="dot" onclick="currentSlide(10, 0)"></span>
-  <span class="dot" onclick="currentSlide(11, 0)"></span>
-  <span class="dot" onclick="currentSlide(12, 0)"></span>
-  <span class="dot" onclick="currentSlide(13, 0)"></span>
-  <span class="dot" onclick="currentSlide(14, 0)"></span>
-  <span class="dot" onclick="currentSlide(15, 0)"></span>
-</div>  -->
-	  
-    <!--BLOG TEXT-->
+
         <div class="blog-text">
-          <p>We looked at the Chateaugay bank building last weekend. This time, let’s turn to the Anderson Block on the north side of East Main Street. This structure was built following the great fire of 1893 which destroyed every building between River Street and John Street. Mary Humiston wrote an account of this blaze in the very first edition of our newsletter in 2007. 
+        <p>We looked at the Chateaugay bank building last weekend. This time, let’s turn to the Anderson Block on the north side of East Main Street. This structure was built following the great fire of 1893 which destroyed every building between River Street and John Street. Mary Humiston wrote an account of this blaze in the very first edition of our newsletter in 2007. 
 The temps were far below zero and the wind was blowing a gale on the night of the fire. The Fire Department had no chance against those daunting conditions. When the sun rose the next morning, the entire block was in ruins. In fact, the embers had even swirled around and ignited the small store west of the blaze on the corner of River and West Main. This, too, was destroyed. In fact, that newly vacant lot made construction of the new bank possible (but that was last week’s post). </p>
 <p>Many owners on East Main Street immediately began to make plans to rebuild. Others sold the property and buyers scooped up the suddenly available lots and made plans for new business buildings. A new village ordinance mandated that all newly constructed business district structures had to be of masonry, not wood construction.
 Mrs. Rudolphus Anderson, born Cornelia Smith, made plans for the building shown in the first photo below. Mrs. Anderson certainly had the financial means to construct the imposing building that she wanted. Her late father was Judge Henry Smith. He was the son of Col. Thomas Smith (who owned Smith’s Tavern that had originally stood at the corner of River and East Main) and the grandson of Major Jacob Smith (who was one of Chateaugay’s earliest settlers and had built a small tannery at his property on what is now the Earlville Road.) Jacob Smith had fought in the Revolutionary War and Thomas had served in the War of 1812.</p>
@@ -172,9 +176,9 @@ All of the block reconstruction from River to John Streets that followed the 189
 Is this block the “grand dame” of the remaining business blocks on Main Street? Who can say, but she surely still has the potential to be a showcase of 1890s commercial construction in Chateaugay. </p>
 <p>Following are some of the shots I took that day. Some of the photos show original construction details and design while others show more recent changes and remodeling that has been done over the years.</p>
 <p>I was very impressed as I went through it from basement to second floor. Enough of the original features of Mrs. Anderson’s construction plan still exist to clearly show how her vision for the building was made reality as it rose from the ashes of that devastating 1893 fire.</p>
-		 </div>
-		</div>
-  </div>
+        </div>
+    </div>
+</div>
 
 
 <!-- Site Page -->
@@ -189,45 +193,42 @@ Is this block the “grand dame” of the remaining business blocks on Main Stre
      <!-- Slideshow container -->
 <div class="slideshow-container">
 
-  <!-- Full-width images with number and caption text -->
-  <div class="mySlides2 none">
-    <div class="numbertext">1 / 4</div>
-    <img src="blog/keybank_01.jpg" style="width:100%">
-    <!--<div class="text">Caption Text</div>-->
-  </div>
+<!-- Full-width images with number and caption text -->
+
 
   <div class="mySlides2 none">
-    <div class="numbertext">2 / 4</div>
-    <img src="blog/keybank_02.jpg" style="width:100%">
+     <div class="numbertext">1 / 4</div>
+    <img src="blog/imgs/2021-02-07_keybank/2021-02-07_keybank_1.jpg" style="width:100%">
   </div>
+
 
   <div class="mySlides2 none">
-    <div class="numbertext">3 / 4</div>
-    <img src="blog/keybank_03.JPG" style="width:100%">
+     <div class="numbertext">2 / 4</div>
+    <img src="blog/imgs/2021-02-07_keybank/2021-02-07_keybank_2.jpg" style="width:100%">
   </div>
 
-    <div class="mySlides2 none">
-      <div class="numbertext">4 / 4</div>
-    <img src="blog/keybank_04.JPG" style="width:100%">
+
+  <div class="mySlides2 none">
+     <div class="numbertext">3 / 4</div>
+    <img src="blog/imgs/2021-02-07_keybank/2021-02-07_keybank_3.jpg" style="width:100%">
   </div>
 
-  <!-- Next and previous buttons -->
+
+  <div class="mySlides2 none">
+     <div class="numbertext">4 / 4</div>
+    <img src="blog/imgs/2021-02-07_keybank/2021-02-07_keybank_4.jpg" style="width:100%">
+  </div>
+
+
+      <!-- Next and previous buttons -->
   <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
   <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
 </div>
 <br>
 
-<!-- The dots/circles -->
-<!-- <div style="text-align:center">
-  <span class="dot" onclick="currentSlide(1, 1)"></span>
-  <span class="dot" onclick="currentSlide(2, 1)"></span>
-  <span class="dot" onclick="currentSlide(3, 1)"></span>
-  <span class="dot" onclick="currentSlide(4, 1)"></span>
-</div>  -->
-    
-    <!--BLOG TEXT-->
+
         <div class="blog-text">
-          <p>The Chateaugay branch of Key Bank closed almost two years ago. The building sits empty today. When it was built in late 1890s, it quickly became one of the busiest spots in the business district. </p>
+                  <p>The Chateaugay branch of Key Bank closed almost two years ago. The building sits empty today. When it was built in late 1890s, it quickly became one of the busiest spots in the business district. </p>
 
 <p>The bank used a portion of the first floor for its lobby and located several banking offices in the lowest level. The rest of the first floor and the second housed several retail businesses over the early years. The third floor was used as a meeting space for the Grand Army of the Republic at first and then the Masonic Lodge used the floor. </p>
 
@@ -240,16 +241,17 @@ Is this block the “grand dame” of the remaining business blocks on Main Stre
 <p>Included here is an image of the bank shortly after it opened and the main entrance was on the corner. The next photo shows the bank more recently with the entrance on the west side of the building's front. The last two shots show the space on the third floor. Even though it has not been used for many years, it is easy to see how well finished the room was when it was new.</p>
 
 <p>Another Chateaugay landmark transitions to an uncertain future...</p>
-     </div>
+        </div>
     </div>
-  </div>
+</div>
+
 
 <!--Footer-->
 <div id="footer">
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2018 Chateaugay Historical Society. </br>
-	  Last Modified [February 15, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+      Last Modified [February 15, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
@@ -267,3 +269,4 @@ Is this block the “grand dame” of the remaining business blocks on Main Stre
 <script type="text/javascript" src="js/slideshow.js"></script>
 </body>
 </html>
+
