Python Generated Blog Pages

--- a/Businesses.html
+++ b/Businesses.html
@@ -54,6 +54,7 @@
           <li> <a class="page-scroll" href=blog.html>Recent</a></li>
 <li> <a class="page-scroll" href=Buildings.html>Buildings</a></li>
 <li> <a class="page-scroll" href=Businesses.html>Businesses</a></li>
+<li> <a class="page-scroll" href=Farms.html>Farms</a></li>
           
         </ul>
       </div>
@@ -64,7 +65,7 @@
 
 
 <!-- Site Page -->
-<div id="blog1">
+<div id="blog2">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Anderson Block</h2>
@@ -197,7 +198,7 @@ Is this block the “grand dame” of the remaining business blocks on Main Stre
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Key Bank</h2>
@@ -266,7 +267,7 @@ Is this block the “grand dame” of the remaining business blocks on Main Stre
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2018 Chateaugay Historical Society. </br>
-      Last Modified [February 17, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+      Last Modified [February 19, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
