--- a/blog.html
+++ b/blog.html
@@ -54,6 +54,7 @@
           <li> <a class="page-scroll" href=blog.html>Recent</a></li>
 <li> <a class="page-scroll" href=Buildings.html>Buildings</a></li>
 <li> <a class="page-scroll" href=Businesses.html>Businesses</a></li>
+<li> <a class="page-scroll" href=Farms.html>Farms</a></li>
           
         </ul>
       </div>
@@ -67,6 +68,143 @@
 <div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
+      <h2>Stoughton - Dupree Farm</h2>
+      <hr>
+      <h5>February 19, 2021 | Mick Jarvis</h5>
+    </div>
+
+     <!-- Slideshow container -->
+<div class="slideshow-container">
+
+<!-- Full-width images with number and caption text -->
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">1 / 14</div>
+    <img src="blog/imgs/2021-02-19_stoughton-dupreefarm/stoughton-dupreefarm_01.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">2 / 14</div>
+    <img src="blog/imgs/2021-02-19_stoughton-dupreefarm/stoughton-dupreefarm_02.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">3 / 14</div>
+    <img src="blog/imgs/2021-02-19_stoughton-dupreefarm/stoughton-dupreefarm_03.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">4 / 14</div>
+    <img src="blog/imgs/2021-02-19_stoughton-dupreefarm/stoughton-dupreefarm_04.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">5 / 14</div>
+    <img src="blog/imgs/2021-02-19_stoughton-dupreefarm/stoughton-dupreefarm_05.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">6 / 14</div>
+    <img src="blog/imgs/2021-02-19_stoughton-dupreefarm/stoughton-dupreefarm_06.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">7 / 14</div>
+    <img src="blog/imgs/2021-02-19_stoughton-dupreefarm/stoughton-dupreefarm_07.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">8 / 14</div>
+    <img src="blog/imgs/2021-02-19_stoughton-dupreefarm/stoughton-dupreefarm_08.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">9 / 14</div>
+    <img src="blog/imgs/2021-02-19_stoughton-dupreefarm/stoughton-dupreefarm_09.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">10 / 14</div>
+    <img src="blog/imgs/2021-02-19_stoughton-dupreefarm/stoughton-dupreefarm_10.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">11 / 14</div>
+    <img src="blog/imgs/2021-02-19_stoughton-dupreefarm/stoughton-dupreefarm_11.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">12 / 14</div>
+    <img src="blog/imgs/2021-02-19_stoughton-dupreefarm/stoughton-dupreefarm_12.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">13 / 14</div>
+    <img src="blog/imgs/2021-02-19_stoughton-dupreefarm/stoughton-dupreefarm_13.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">14 / 14</div>
+    <img src="blog/imgs/2021-02-19_stoughton-dupreefarm/stoughton-dupreefarm_14.jpg" style="width:100%">
+  </div>
+
+
+      <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+</div>
+<br>
+
+
+        <div class="blog-text">
+        <p>This weekend we will again explore another building, but not a business property in the village like the last two weekends. About two miles east of the village limits is property on the south side of Route 11 that originally belonged to one of Chateaugay’s first settlers. </p>
+
+<p>Samuel Stoughton came here in the earliest years of Chateaugay’s founding. He is listed in the 1798 Tax Assessment for Clinton County (Franklin County had not been established yet) as the owner of 150 acres.</p>
+
+<p>Part of his property became the farm of his son, Samuel W. Stoughton. The younger Samuel had been born in 1812, a time when Chateaugay’s population was small and most of the land was still heavily forested. In addition, there were considerable troop movements through the town and a sizable presence of troops camped here all during the war of 1812.</p>
+
+<p>Samuel W. eventually married Margaret Witherspoon in 1843. Over the next 30 years, they farmed the land and had a family of nine children. In the 1870s they sold to their son, James H. Stoughton and his wife, Nancy.</p>
+
+<p>It was James and a man named Polick that built the barn which is today’s topic. In 1884, this innovative dairy barn was constructed and became the centerpiece of the farm. But, before describing the structure itself, let’s look at the owners that bring the farm into the present.</p>
+
+<p>In 1887, James Stoughton passed away at the age of 36. The next year his wife sold the property to Wolford Smith. For almost 25 years, the Smiths farmed and raised their family.</p>
+
+<p>In 1912, George McGregor bought the farm and kept dairy cows until 1944 when he sold to Thomas and Margaret Dupree. Their son, Bob, and his wife Edna bought in 1960 and raised their family there. The farm is currently owned by their children.</p>
+
+<p>The barn was designed to accommodate the lay of the land and was basically built into the sloping hillside. During one of the times I stopped over to visit with Bob, we got talking about the barn and he related the story behind the building and its layout. It was considered to be quite state-of-the-art when built and later became one of the first to install a modern milking system.</p>
+
+<p> When Bob’s father bought the farm, he found the barn to be much as it was when originally built. The milking was done on the ground floor; milk house in the front and the cattle behind. Much of this level was below ground level, helping it to retain the heat thrown off by the cows in the winter and keeping the summer heat out and making it cooler during warmer weather.</p>
+
+<p>The barn was built to allow a horse team to walk into the second level hay mow from the back of the barn. Once the hay was unloaded, there was a turntable in the floor that allowed the team and wagon to be spun around and driven straight out the doors in the back. The Duprees eventually removed the turntable but the basic structure of the barn remained the same.</p>
+
+<p>The years have taken their toll and the masonry is deteriorating at this point. Bob told me that he and his father before him always made sure to keep a good roof on the building. With that, the framing remains largely intact and unaffected.</p>
+
+<p>In 1984, the Chateaugay Record featured the barn in a front page article, calling it the “Centennial Barn” and briefly tracing its history.</p>
+
+<p>After our conversation about the building, my next request was to be able to take photos of it. Bob readily said “sure” and off I went with my camera. What follows is a sampling of the photos I took that day. They show another unique Chateaugay treasure that is part of the fabric our great hometown.</p>
+        </div>
+    </div>
+</div>
+
+
+<!-- Site Page -->
+<div id="blog2">
+  <div class="container">
+    <div class="section-title text-center center">
       <h2>Anderson Block</h2>
       <hr>
       <h5>February 12, 2021 | Mick Jarvis</h5>
@@ -78,99 +216,99 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">1 / 15</div>
     <img src="blog/imgs/2021-02-12_andersonblock/2021-02-12_andersonblock_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">2 / 15</div>
     <img src="blog/imgs/2021-02-12_andersonblock/2021-02-12_andersonblock_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">3 / 15</div>
     <img src="blog/imgs/2021-02-12_andersonblock/2021-02-12_andersonblock_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">4 / 15</div>
     <img src="blog/imgs/2021-02-12_andersonblock/2021-02-12_andersonblock_04.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">5 / 15</div>
     <img src="blog/imgs/2021-02-12_andersonblock/2021-02-12_andersonblock_05.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">6 / 15</div>
     <img src="blog/imgs/2021-02-12_andersonblock/2021-02-12_andersonblock_06.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">7 / 15</div>
     <img src="blog/imgs/2021-02-12_andersonblock/2021-02-12_andersonblock_07.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">8 / 15</div>
     <img src="blog/imgs/2021-02-12_andersonblock/2021-02-12_andersonblock_08.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">9 / 15</div>
     <img src="blog/imgs/2021-02-12_andersonblock/2021-02-12_andersonblock_09.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">10 / 15</div>
     <img src="blog/imgs/2021-02-12_andersonblock/2021-02-12_andersonblock_10.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">11 / 15</div>
     <img src="blog/imgs/2021-02-12_andersonblock/2021-02-12_andersonblock_11.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">12 / 15</div>
     <img src="blog/imgs/2021-02-12_andersonblock/2021-02-12_andersonblock_12.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">13 / 15</div>
     <img src="blog/imgs/2021-02-12_andersonblock/2021-02-12_andersonblock_13.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">14 / 15</div>
     <img src="blog/imgs/2021-02-12_andersonblock/2021-02-12_andersonblock_14.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">15 / 15</div>
     <img src="blog/imgs/2021-02-12_andersonblock/2021-02-12_andersonblock_15.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
 </div>
 <br>
 
@@ -197,7 +335,7 @@ Is this block the “grand dame” of the remaining business blocks on Main Stre
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Key Bank</h2>
@@ -211,33 +349,33 @@ Is this block the “grand dame” of the remaining business blocks on Main Stre
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">1 / 4</div>
     <img src="blog/imgs/2021-02-07_keybank/2021-02-07_keybank_1.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">2 / 4</div>
     <img src="blog/imgs/2021-02-07_keybank/2021-02-07_keybank_2.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">3 / 4</div>
     <img src="blog/imgs/2021-02-07_keybank/2021-02-07_keybank_3.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">4 / 4</div>
     <img src="blog/imgs/2021-02-07_keybank/2021-02-07_keybank_4.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
 </div>
 <br>
 
@@ -266,7 +404,7 @@ Is this block the “grand dame” of the remaining business blocks on Main Stre
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2018 Chateaugay Historical Society. </br>
-      Last Modified [February 17, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+      Last Modified [February 19, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
