Python script creation of pages

--- a/blog.html
+++ b/blog.html
@@ -69,6 +69,57 @@
 <div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
+      <h2>East Main Street Postcard</h2>
+      <hr>
+      <h5>March 26, 2021 | Mick Jarvis</h5>
+    </div>
+
+     <!-- Slideshow container -->
+<div class="slideshow-container">
+
+<!-- Full-width images with number and caption text -->
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">1 / 1</div>
+    <img src="blog/imgs/2021-03-26_eastmainstreetpostcard/eastmainstreetpostcard_01.jpg" style="width:100%">
+  </div>
+
+
+      <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+</div>
+<br>
+
+
+        <div class="blog-text">
+        <p>Here is one of my favorite images showing the south side of East Main Street. This side of East Main was never photographed as much as the north side but the buildings were equally as impressive.</p> 
+
+<p>This postcard is undated but is probably from the late 1920s.  It clearly shows the extent of the buildings on this side of the street back then. </p>
+
+<p>The only two of these buildings still standing. First, is the one on the corner, in the immediate right of the scene. This is the Jackson Block which was constructed in 1876. Among the more recent businesses in this two-storefront structure have been (in no particular order): Mills Diner, Ethel's Harvest Room, Bush's Restaurant, Chic-Toggs, Write One, and Hometown Family Chiropractic. It is vacant today. </p>
+
+<p>The only other surviving building is the three story one, midway down the street. This has been the home of Shaw's 5&10, Alix's Variety Store, and Lopardo's Barber Shop. Today it is Write One Plus.</p>
+
+<p>If the postcard was enlarged, one can see the stained glass transom panels in each masonry building just like the ones that were in the north side buildings.</p>
+
+<p>The two wooden frame buildings sandwiched between the two surviving buildings were demolished to create the grass lot that is there today.</p>
+
+<p>The first portions of the building immediately to the east of the three story structure were where Cantwell's Hall was located on the second floor. The ground floor would eventually become Pearl's (which is a subject of one of the articles in the soon-to-be published Chateaugay Historical Society quarterly newsletter) which was the "go to" downtown store for clothing and footwear for the whole family for many years.</p>
+
+<p>The lumberyard which sits across from the Town Hall (and is the subject of another article in that upcoming issue) is obscured by the trees.</p>
+
+<p>For a small town, Chateaugay certainly had an impressive business district "back in the day."</p>
+        </div>
+    </div>
+</div>
+
+
+<!-- Site Page -->
+<div id="blog2">
+  <div class="container">
+    <div class="section-title text-center center">
       <h2>West Main Street Pre WWI</h2>
       <hr>
       <h5>March 6, 2021 | Mick Jarvis</h5>
@@ -80,51 +131,51 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">1 / 7</div>
     <img src="blog/imgs/2021-03-06_westmainstreetpreWWI/westmainstreetpreWWI_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">2 / 7</div>
     <img src="blog/imgs/2021-03-06_westmainstreetpreWWI/westmainstreetpreWWI_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">3 / 7</div>
     <img src="blog/imgs/2021-03-06_westmainstreetpreWWI/westmainstreetpreWWI_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">4 / 7</div>
     <img src="blog/imgs/2021-03-06_westmainstreetpreWWI/westmainstreetpreWWI_04.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">5 / 7</div>
     <img src="blog/imgs/2021-03-06_westmainstreetpreWWI/westmainstreetpreWWI_05.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">6 / 7</div>
     <img src="blog/imgs/2021-03-06_westmainstreetpreWWI/westmainstreetpreWWI_06.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">7 / 7</div>
     <img src="blog/imgs/2021-03-06_westmainstreetpreWWI/westmainstreetpreWWI_07.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
 </div>
 <br>
 
@@ -161,7 +212,7 @@
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>East Main Street & Business Ads</h2>
@@ -175,171 +226,171 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">1 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">2 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">3 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">4 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_04.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">5 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_05.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">6 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_06.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">7 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_07.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">8 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_08.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">9 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_09.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">10 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_10.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">11 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_11.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">12 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_12.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">13 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_13.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">14 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_14.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">15 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_15.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">16 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_16.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">17 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_17.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">18 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_18.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">19 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_19.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">20 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_20.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">21 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_21.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">22 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_22.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">23 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_23.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">24 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_24.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">25 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_25.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">26 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_26.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">27 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_27.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
 </div>
 <br>
 
@@ -357,149 +408,12 @@
 </div>
 
 
-<!-- Site Page -->
-<div id="blog1">
-  <div class="container">
-    <div class="section-title text-center center">
-      <h2>Stoughton - Dupree Farm</h2>
-      <hr>
-      <h5>February 19, 2021 | Mick Jarvis</h5>
-    </div>
-
-     <!-- Slideshow container -->
-<div class="slideshow-container">
-
-<!-- Full-width images with number and caption text -->
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">1 / 14</div>
-    <img src="blog/imgs/2021-02-19_stoughton-dupreefarm/stoughton-dupreefarm_01.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">2 / 14</div>
-    <img src="blog/imgs/2021-02-19_stoughton-dupreefarm/stoughton-dupreefarm_02.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">3 / 14</div>
-    <img src="blog/imgs/2021-02-19_stoughton-dupreefarm/stoughton-dupreefarm_03.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">4 / 14</div>
-    <img src="blog/imgs/2021-02-19_stoughton-dupreefarm/stoughton-dupreefarm_04.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">5 / 14</div>
-    <img src="blog/imgs/2021-02-19_stoughton-dupreefarm/stoughton-dupreefarm_05.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">6 / 14</div>
-    <img src="blog/imgs/2021-02-19_stoughton-dupreefarm/stoughton-dupreefarm_06.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">7 / 14</div>
-    <img src="blog/imgs/2021-02-19_stoughton-dupreefarm/stoughton-dupreefarm_07.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">8 / 14</div>
-    <img src="blog/imgs/2021-02-19_stoughton-dupreefarm/stoughton-dupreefarm_08.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">9 / 14</div>
-    <img src="blog/imgs/2021-02-19_stoughton-dupreefarm/stoughton-dupreefarm_09.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">10 / 14</div>
-    <img src="blog/imgs/2021-02-19_stoughton-dupreefarm/stoughton-dupreefarm_10.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">11 / 14</div>
-    <img src="blog/imgs/2021-02-19_stoughton-dupreefarm/stoughton-dupreefarm_11.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">12 / 14</div>
-    <img src="blog/imgs/2021-02-19_stoughton-dupreefarm/stoughton-dupreefarm_12.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">13 / 14</div>
-    <img src="blog/imgs/2021-02-19_stoughton-dupreefarm/stoughton-dupreefarm_13.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">14 / 14</div>
-    <img src="blog/imgs/2021-02-19_stoughton-dupreefarm/stoughton-dupreefarm_14.jpg" style="width:100%">
-  </div>
-
-
-      <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
-</div>
-<br>
-
-
-        <div class="blog-text">
-        <p>This weekend we will again explore another building, but not a business property in the village like the last two weekends. About two miles east of the village limits is property on the south side of Route 11 that originally belonged to one of Chateaugay’s first settlers. </p>
-
-<p>Samuel Stoughton came here in the earliest years of Chateaugay’s founding. He is listed in the 1798 Tax Assessment for Clinton County (Franklin County had not been established yet) as the owner of 150 acres.</p>
-
-<p>Part of his property became the farm of his son, Samuel W. Stoughton. The younger Samuel had been born in 1812, a time when Chateaugay’s population was small and most of the land was still heavily forested. In addition, there were considerable troop movements through the town and a sizable presence of troops camped here all during the war of 1812.</p>
-
-<p>Samuel W. eventually married Margaret Witherspoon in 1843. Over the next 30 years, they farmed the land and had a family of nine children. In the 1870s they sold to their son, James H. Stoughton and his wife, Nancy.</p>
-
-<p>It was James and a man named Polick that built the barn which is today’s topic. In 1884, this innovative dairy barn was constructed and became the centerpiece of the farm. But, before describing the structure itself, let’s look at the owners that bring the farm into the present.</p>
-
-<p>In 1887, James Stoughton passed away at the age of 36. The next year his wife sold the property to Wolford Smith. For almost 25 years, the Smiths farmed and raised their family.</p>
-
-<p>In 1912, George McGregor bought the farm and kept dairy cows until 1944 when he sold to Thomas and Margaret Dupree. Their son, Bob, and his wife Edna bought in 1960 and raised their family there. The farm is currently owned by their children.</p>
-
-<p>The barn was designed to accommodate the lay of the land and was basically built into the sloping hillside. During one of the times I stopped over to visit with Bob, we got talking about the barn and he related the story behind the building and its layout. It was considered to be quite state-of-the-art when built and later became one of the first to install a modern milking system.</p>
-
-<p> When Bob’s father bought the farm, he found the barn to be much as it was when originally built. The milking was done on the ground floor; milk house in the front and the cattle behind. Much of this level was below ground level, helping it to retain the heat thrown off by the cows in the winter and keeping the summer heat out and making it cooler during warmer weather.</p>
-
-<p>The barn was built to allow a horse team to walk into the second level hay mow from the back of the barn. Once the hay was unloaded, there was a turntable in the floor that allowed the team and wagon to be spun around and driven straight out the doors in the back. The Duprees eventually removed the turntable but the basic structure of the barn remained the same.</p>
-
-<p>The years have taken their toll and the masonry is deteriorating at this point. Bob told me that he and his father before him always made sure to keep a good roof on the building. With that, the framing remains largely intact and unaffected.</p>
-
-<p>In 1984, the Chateaugay Record featured the barn in a front page article, calling it the “Centennial Barn” and briefly tracing its history.</p>
-
-<p>After our conversation about the building, my next request was to be able to take photos of it. Bob readily said “sure” and off I went with my camera. What follows is a sampling of the photos I took that day. They show another unique Chateaugay treasure that is part of the fabric our great hometown.</p>
-        </div>
-    </div>
-</div>
-
-
 <!--Footer-->
 <div id="footer">
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2018 Chateaugay Historical Society. </br>
-      Last Modified [March 08, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+      Last Modified [March 31, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
