Python generated html

--- a/Streets.html
+++ b/Streets.html
@@ -70,6 +70,57 @@
 <div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
+      <h2>Jake's Red Hots</h2>
+      <hr>
+      <h5>April 24, 2021 | Mick Jarvis</h5>
+    </div>
+
+     <!-- Slideshow container -->
+<div class="slideshow-container">
+
+<!-- Full-width images with number and caption text -->
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">1 / 2</div>
+    <img src="blog/imgs/2021-04-24_jakesredhots/jakesredhots_1.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">2 / 2</div>
+    <img src="blog/imgs/2021-04-24_jakesredhots/jakesredhots_2.jpg" style="width:100%">
+  </div>
+
+
+      <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+</div>
+<br>
+
+
+        <div class="blog-text">
+        <p>Jake’s Red Hots were sold in the little stand on West Main Street from the summer of 1948 through the summer of 1966. The michigans sold at the stand during that time all had the original sauce developed by Jake LaPage. Beginning in the summer of 1967, the Furnia family rented the West Main Street stand and used their own recipe as Jake’s recipe was not included in the rental arrangement.</p>
+
+<p>In the mid-70s, the Furnias built the Whistle Stop on Depot Street in front of the RR Passenger Depot. The Whistle Stop remained open for about ten years.</p>
+
+<p>Today, excellent michigans are available locally at Wendy’s Quick Stop, Harrigan’s Soft Ice Cream and Fast Food, The Cherry Knoll and Dick’s Country Store. Each uses their own recipe for the sauce.</p>
+
+<p>The original Jake’s michigan sauce recipe was included in the article I wrote for the Historical Society newsletter. The long held family secret was printed in that article with the permission of Jake’s daughter, Linda LePage Orsborn. When I inquired about including the recipe, here is the note she sent me:</p>
+
+<p>"When my Mom ran the stand she needed the recipe to be private, so did my Nanny and Gramps. I hope you will include the recipe in the article. So many people enjoyed the michigans and remember them after so many years. I think we should keep the Chateaugay tradition going. I would like to think that a new generation of Chateaugay will start to enjoy the recipe and have them at their summer gatherings."</p>
+
+<p>A photo of the stand on West Main and Jake’s original sauce recipe are featured here. Enjoy!</p>
+        </div>
+    </div>
+</div>
+
+
+<!-- Site Page -->
+<div id="blog2">
+  <div class="container">
+    <div class="section-title text-center center">
       <h2>East Main Street Postcard</h2>
       <hr>
       <h5>March 26, 2021 | Mick Jarvis</h5>
@@ -81,15 +132,15 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">1 / 1</div>
     <img src="blog/imgs/2021-03-26_eastmainstreetpostcard/eastmainstreetpostcard_01.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
 </div>
 <br>
 
@@ -118,7 +169,7 @@
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>West Main Street Pre WWI</h2>
@@ -132,51 +183,51 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">1 / 7</div>
     <img src="blog/imgs/2021-03-06_westmainstreetpreWWI/westmainstreetpreWWI_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">2 / 7</div>
     <img src="blog/imgs/2021-03-06_westmainstreetpreWWI/westmainstreetpreWWI_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">3 / 7</div>
     <img src="blog/imgs/2021-03-06_westmainstreetpreWWI/westmainstreetpreWWI_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">4 / 7</div>
     <img src="blog/imgs/2021-03-06_westmainstreetpreWWI/westmainstreetpreWWI_04.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">5 / 7</div>
     <img src="blog/imgs/2021-03-06_westmainstreetpreWWI/westmainstreetpreWWI_05.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">6 / 7</div>
     <img src="blog/imgs/2021-03-06_westmainstreetpreWWI/westmainstreetpreWWI_06.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">7 / 7</div>
     <img src="blog/imgs/2021-03-06_westmainstreetpreWWI/westmainstreetpreWWI_07.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
 </div>
 <br>
 
@@ -213,7 +264,7 @@
 
 
 <!-- Site Page -->
-<div id="blog1">
+<div id="blog2">
   <div class="container">
     <div class="section-title text-center center">
       <h2>East Main Street & Business Ads</h2>
@@ -227,171 +278,171 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">1 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">2 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">3 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">4 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_04.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">5 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_05.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">6 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_06.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">7 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_07.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">8 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_08.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">9 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_09.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">10 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_10.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">11 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_11.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">12 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_12.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">13 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_13.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">14 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_14.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">15 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_15.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">16 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_16.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">17 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_17.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">18 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_18.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">19 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_19.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">20 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_20.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">21 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_21.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">22 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_22.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">23 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_23.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">24 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_24.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">25 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_25.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">26 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_26.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">27 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_27.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 3)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 3)">&#10095;</a>
 </div>
 <br>
 
@@ -414,7 +465,7 @@
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2018 Chateaugay Historical Society. </br>
-      Last Modified [April 19, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+      Last Modified [April 25, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
