--- a/blog.html
+++ b/blog.html
@@ -70,6 +70,57 @@
 <div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
+      <h2>Jake's Red Hots</h2>
+      <hr>
+      <h5>April 24, 2021 | Mick Jarvis</h5>
+    </div>
+
+     <!-- Slideshow container -->
+<div class="slideshow-container">
+
+<!-- Full-width images with number and caption text -->
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">1 / 2</div>
+    <img src="blog/imgs/2021-04-24_jakesredhots/jakesredhots_1.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">2 / 2</div>
+    <img src="blog/imgs/2021-04-24_jakesredhots/jakesredhots_2.jpg" style="width:100%">
+  </div>
+
+
+      <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+</div>
+<br>
+
+
+        <div class="blog-text">
+        <p>Jake’s Red Hots were sold in the little stand on West Main Street from the summer of 1948 through the summer of 1966. The michigans sold at the stand during that time all had the original sauce developed by Jake LaPage. Beginning in the summer of 1967, the Furnia family rented the West Main Street stand and used their own recipe as Jake’s recipe was not included in the rental arrangement.</p>
+
+<p>In the mid-70s, the Furnias built the Whistle Stop on Depot Street in front of the RR Passenger Depot. The Whistle Stop remained open for about ten years.</p>
+
+<p>Today, excellent michigans are available locally at Wendy’s Quick Stop, Harrigan’s Soft Ice Cream and Fast Food, The Cherry Knoll and Dick’s Country Store. Each uses their own recipe for the sauce.</p>
+
+<p>The original Jake’s michigan sauce recipe was included in the article I wrote for the Historical Society newsletter. The long held family secret was printed in that article with the permission of Jake’s daughter, Linda LePage Orsborn. When I inquired about including the recipe, here is the note she sent me:</p>
+
+<p>"When my Mom ran the stand she needed the recipe to be private, so did my Nanny and Gramps. I hope you will include the recipe in the article. So many people enjoyed the michigans and remember them after so many years. I think we should keep the Chateaugay tradition going. I would like to think that a new generation of Chateaugay will start to enjoy the recipe and have them at their summer gatherings."</p>
+
+<p>A photo of the stand on West Main and Jake’s original sauce recipe are featured here. Enjoy!</p>
+        </div>
+    </div>
+</div>
+
+
+<!-- Site Page -->
+<div id="blog2">
+  <div class="container">
+    <div class="section-title text-center center">
       <h2>Chateaugay Dairy's Delivery Driver Owen Murray</h2>
       <hr>
       <h5>April 18, 2021 | Mick Jarvis</h5>
@@ -81,21 +132,21 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">1 / 2</div>
     <img src="blog/imgs/2021-04-18_chateaugaydairy-owenmurray/chateaugaydairy-owenmurray_1.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">2 / 2</div>
     <img src="blog/imgs/2021-04-18_chateaugaydairy-owenmurray/chateaugaydairy-owenmurray_2.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
 </div>
 <br>
 
@@ -110,7 +161,7 @@
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>East Main Street Postcard</h2>
@@ -124,15 +175,15 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">1 / 1</div>
     <img src="blog/imgs/2021-03-26_eastmainstreetpostcard/eastmainstreetpostcard_01.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
 </div>
 <br>
 
@@ -160,107 +211,12 @@
 </div>
 
 
-<!-- Site Page -->
-<div id="blog1">
-  <div class="container">
-    <div class="section-title text-center center">
-      <h2>West Main Street Pre WWI</h2>
-      <hr>
-      <h5>March 6, 2021 | Mick Jarvis</h5>
-    </div>
-
-     <!-- Slideshow container -->
-<div class="slideshow-container">
-
-<!-- Full-width images with number and caption text -->
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">1 / 7</div>
-    <img src="blog/imgs/2021-03-06_westmainstreetpreWWI/westmainstreetpreWWI_01.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">2 / 7</div>
-    <img src="blog/imgs/2021-03-06_westmainstreetpreWWI/westmainstreetpreWWI_02.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">3 / 7</div>
-    <img src="blog/imgs/2021-03-06_westmainstreetpreWWI/westmainstreetpreWWI_03.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">4 / 7</div>
-    <img src="blog/imgs/2021-03-06_westmainstreetpreWWI/westmainstreetpreWWI_04.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">5 / 7</div>
-    <img src="blog/imgs/2021-03-06_westmainstreetpreWWI/westmainstreetpreWWI_05.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">6 / 7</div>
-    <img src="blog/imgs/2021-03-06_westmainstreetpreWWI/westmainstreetpreWWI_06.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">7 / 7</div>
-    <img src="blog/imgs/2021-03-06_westmainstreetpreWWI/westmainstreetpreWWI_07.jpg" style="width:100%">
-  </div>
-
-
-      <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
-</div>
-<br>
-
-
-        <div class="blog-text">
-        <p>This weekend, we journey back to West Main Street just before World War I to examine what one would see if they took a stroll just west of the four corners back then.</p>
-
-<p>This first photo shows the paving of West Main as the work crews made their way westward from the four corners. After many years of discussion, Main Street was finally paved with a hard-fired brick beginning in 1912/13. Stacks of pavers can be seen on both sides of the street awaiting installation on the roadway. The improvement was welcomed by all as the muddy mess following wet weather conditions had become a real issue for the locals.</p> 
-
-<p>There is an example of the paving brick used for this project in our Archival Center in the Town Hall.</p>
-
-<p>Shown on the right in the first photo is the exterior and in the second one, the interior, of the first railcar-style diner in Chateaugay. It was owned and operated by Oliver Patnode. His favorite expression was “Holy Jumpin’ Moses” which he used regularly and loudly. This image appeared in the Chateaugay Record and the information comes from the caption that accompanied the photo. Unfortunately it did not reproduce clearly here. The sign above the door reads: “Egg sandwiches 10₵ or two for 15₵” and the two customers are unidentified.</p>
-
-<p>Oliver Patnode’s diner stood where Joe Parent’s store, later the Chasm Hydro offices, and now Backus Realty were/are located.</p>
-
-<p>In the first photo, note the name painted on the west wall of the hotel is the “Chateau”, one of the many names given it over the many years of its operation.</p>
-
-<p>Crossing the street and starting on the corner with the bank building, the first photo does not show the grocery store connected to the bank’s west wall. But, the third photo shows C.H. Crawford’s store with his name on the canvas awning. Immediately west of the grocery is Tobin’s Hotel. (For Society members who save all the issues, look back to your 2011 newsletter copy of Vol. X Issue 3 for a history of George Tobin and his hotel.) The first photo shows the hotel from the west side and the third gives us a look at it from the east side. It was the smallest of the four local hostelries back then (the Union House, the Chateaugay Hotel, the Chasm House and Tobin’s) but it has an interesting and entertaining story about it.</p> 
-
-<p>The fourth photo shows a scene from “Tobin’s Saloon” on the first floor of his hotel. Seen behind the bar are L to R: Walter Humiston, George Plouffe and George Tobin. In front of the bar on the left are Allen Eaton, Dan Golden and an identified man. To the right of the bar are Frank Sitifer and Bert Gillette. Eaton, Golden and the unidentified man all have their glasses of dark beer raised while Bert Gillette appears to be enjoying his favorite cigar.</p>
-
-<p>Note the spittoon on the floor. Also, no barstools here! Just “belly up” to the bar rail and enjoy your favorite adult beverage! There is also a mount of an elk rack above mirror behind the bar.</p>
-
-<p>Continuing westward on the north side of the street, Dan Chambers livery stable is next to Tobin’s. The building that is just out of view at the very edge of the photo is the Chateaugay Record office. The very edge of the first photo catches the power pole that is seen in the fifth photo which shows the Record office.</p>
-
-<p>Unfortunately, this scene would be drastically changed in 1915 when a fire would sweep through the north side of the block. The blaze would begin in the rear of Chamber’s Livery and quickly spread. When the smoke cleared and the fire was finally extinguished, all the buildings from the corner of Harrison Avenue to the bank building would lay in smoking ruins.</p> 
-
-<p>The final two photos here show the devastation left by the blaze. The first is a view from Harrison Avenue that shows the machinery from the destroyed Record office and the remains of the burned out grocery store the morning after the 1915 fire. The second shows the fire’s aftermath as viewed when standing across West Main St from about where the St. Patrick’s parking lot is today.</p>
-
-<p>New buildings would quickly spring up to replace those lost in that 1915 fire. But, because of that blaze, yet another unique Main Street view of Chateaugay from years past would be consigned to the dust bin of local history.</p>
-        </div>
-    </div>
-</div>
-
-
 <!--Footer-->
 <div id="footer">
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2018 Chateaugay Historical Society. </br>
-      Last Modified [April 19, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+      Last Modified [April 25, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
